@startuml

title __FACTORY's Class Diagram__\n

  namespace at.omi.blatt6.a3.smarthome.factory {
    abstract class at.omi.blatt6.a3.smarthome.factory.DefaultDeviceImpl {
        - id : String
        - name : String
        + getId()
        + getName()
        + setId()
        + setName()
    }
  }
  

  namespace at.omi.blatt6.a3.smarthome.factory {
    class at.omi.blatt6.a3.smarthome.factory.Main {
        {static} + main()
    }
  }
  

  namespace at.omi.blatt6.a3.smarthome.factory {
    class at.omi.blatt6.a3.smarthome.factory.SensorImpl {
        - unit : String
        + getUnit()
        + getValue()
        + setUnit()
    }
  }
  

  namespace at.omi.blatt6.a3.smarthome.factory {
    class at.omi.blatt6.a3.smarthome.factory.SimulatedLight1Adapter {
        - id : String
        - name : String
        - on : boolean
        + getId()
        + getName()
        + isOn()
        + setId()
        + setName()
        + switchOff()
        + switchOn()
    }
  }
  

  namespace at.omi.blatt6.a3.smarthome.factory {
    class at.omi.blatt6.a3.smarthome.factory.SimulatedLight2Adapter {
        - id : String
        - name : String
        - on : boolean
        + getId()
        + getName()
        + isOn()
        + setId()
        + setName()
        + switchOff()
        + switchOn()
    }
  }
  

  namespace at.omi.blatt6.a3.smarthome.factory {
    abstract class at.omi.blatt6.a3.smarthome.factory.SmarthomeManager {
        - devices : ArrayList<Device>
        + SmarthomeManager()
        + addDevice()
        + printSensorReadings()
        + switchActorsOff()
        + switchActorsOn()
        {abstract} # createDevice()
        - testDevice()
    }
  }
  

  namespace at.omi.blatt6.a3.smarthome.factory {
    class at.omi.blatt6.a3.smarthome.factory.SmarthomeManagerFactory {
        + createDevice()
    }
  }
  

  at.omi.blatt6.a3.smarthome.factory.DefaultDeviceImpl .up.|> at.omi.smarthome.interfaces.Device
  at.omi.blatt6.a3.smarthome.factory.SensorImpl .up.|> at.omi.smarthome.interfaces.Sensor
  at.omi.blatt6.a3.smarthome.factory.SensorImpl -up-|> at.omi.blatt6.a3.smarthome.factory.DefaultDeviceImpl
  at.omi.blatt6.a3.smarthome.factory.SimulatedLight1Adapter .up.|> at.omi.smarthome.interfaces.Actor
  at.omi.blatt6.a3.smarthome.factory.SimulatedLight1Adapter -up-|> at.omi.smarthome.simulation1.SimulatedLight1
  at.omi.blatt6.a3.smarthome.factory.SimulatedLight2Adapter .up.|> at.omi.smarthome.interfaces.Actor
  at.omi.blatt6.a3.smarthome.factory.SimulatedLight2Adapter -up-|> at.omi.smarthome.simulation2.SimulatedLight2
  at.omi.blatt6.a3.smarthome.factory.SmarthomeManagerFactory -up-|> at.omi.blatt6.a3.smarthome.factory.SmarthomeManager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
